flux/receiver-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
spec:
  ingressClassName: nginx
  rules:
    - host: flux-webhook.sharing.io
      http:
        paths:
          - backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - flux-webhook.sharing.io
